--- a/package.json
+++ b/package.json
@@ -1,23 +1,84 @@
 {
   "name": "vue-aip-calendar",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Localized, accessible calendar and datepicker for Vue with no external dependencies.",
   "main": "index.js",
-  "directories": {
-    "doc": "docs",
-    "test": "tests"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "npm run lint:js && npm run lint:sass",
+    "lint:js": "eslint --ext .js,.vue,.html calendar datepicker tests docs",
+    "lint:sass": "sass-lint -q -v",
+    "pretest": "npm run lint",
+    "test": "npm run unit && npm run integration",
+    "posttest": "npm run docs:generate",
+    "start": "npm run docs",
+    "docs": "NODE_ENV=dev nuxt -c docs/nuxt.config.js",
+    "docs:generate": "nuxt generate -c docs/nuxt.config.js",
+    "unit": "karma start tests/unit/karma.conf.js --single-run",
+    "integration": "ava tests/integration"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/r0hanc/vue-a11y-datepicker.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
+  "keywords": [
+    "a11y",
+    "calendar",
+    "vue",
+    "i18n",
+    "component",
+    "vue.js",
+    "accessibility",
+    "internationalization"
+  ],
   "bugs": {
     "url": "https://github.com/r0hanc/vue-a11y-datepicker/issues"
   },
-  "homepage": "https://github.com/r0hanc/vue-a11y-datepicker#readme"
+  "homepage": "https://github.com/r0hanc/vue-a11y-datepicker#readme",
+  "devDependencies": {
+    "@nuxtjs/markdownit": "^1.1.2",
+    "@nuxtjs/pwa": "^0.2.1",
+    "ava": "^0.22.0",
+    "babel-eslint": "^8.0.0",
+    "babel-loader": "^7.1.2",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-vue": "^3.13.0",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.30.1",
+    "ibm-design-colors": "^2.0.4",
+    "karma": "^1.7.1",
+    "karma-chai-plugins": "^0.9.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^1.3.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "^2.0.5",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-prism": "^1.1.1",
+    "mocha": "^4.0.1",
+    "node-sass": "^4.5.3",
+    "nuxt": "^1.0.0-rc11",
+    "prismjs": "^1.8.1",
+    "puppeteer": "^0.11.0",
+    "sass-lint": "^1.11.1",
+    "sass-loader": "^6.0.6",
+    "sinon-chai": "^2.14.0",
+    "vue-prism-component": "^1.0.1",
+    "vue-style-loader": "^3.0.3",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
+  },
+  "peerDependencies": {
+    "sass-loader": "^6.0",
+    "vue": "^2.4"
+  }
 }
